Add subscribe community endpoints
